# whisper-translator-poc

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt  test2.py
whispers_translate/: config.py  sound_input.py  types.py  whisper_translate.py
